2014-20-05 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp:534 nexted to output numbers in hex format
	(which creates inconsistent internal names for referring to
	expressions without aliases)

2014-20-02 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp:1742 remove bound == 0 (an error discovered by
	Junmin Gu)

2014-09-20 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: when activate a set of bitvectors between i and
	j, the offsets for buf was computed incorrectly, which leads to
	wrong bitvectors being reconstructed

2014-09-17 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add a new variant of index::bitmapReader::read that
	takes array_t<uint32_t>
	* src/bitvector.h: add new constructor of bitvector that uses a
	part of an array_t object
	* src/index.cpp: use array_t<uint32_t> with index::bitmapReader so
	that temporary storage could be reference counted, to address the
	problem reported by Jerome Soumagne

2014-09-11 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function attachIndex, set the mask to all 1s
	if the existing mask is empty
	* src/bord.cpp: in constructor of bord from a list of columns, ask
	each column for the number of rows
	* src/bord.h: add function ibis::bord::column::getDataflag and
	ibis::bord::column::setDataflag

2014-09-10 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in constructor of bord, check the validify of
	pointer buf before using (to address a problem reported by Jerome
	Soumagne

2014-09-03 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: in ibis::text::stringSearch, adjust the LOGGER
	statements to prevent the end of file being recognied as an error
	(a problem reported by Marek mdmarek at gmail.com)
	* src/util.h: add ibis::util::flock to wrap around posix function
	flock, invoke util::flock to make sure an exclusive lock on the
	index is acquired before attempting to write the actual content of
	an index.  This is intended to address the problem reported by