@@ -93,6 +93,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Compiler support std::unordered_map */
+#undef HAVE_UNORDERED_MAP
+
 /* Define to 1 if you have the `vprintf' function. */
 #undef HAVE_VPRINTF
 
